fixed week & steel need needle, effects on btn

--- a/index.html
+++ b/index.html
@@ -21,22 +21,13 @@
 					<input type="radio" name="daysNdates" id="Fri">
 					<input type="radio" name="daysNdates" id="Sat">
 					<input type="radio" name="daysNdates" id="Sun">
-					<label for="Mon" class="roundStyle"><p>1</p></label>
-					<label for="Tue" class="roundStyle"><p>2</p></label>
-					<label for="Wed" class="roundStyle"><p>3</p></label>
-					<label for="Thu" class="roundStyle"><p>4</p></label>
-					<label for="Fri" class="roundStyle"><p>5</p></label>
-					<label for="Sat" class="roundStyle"><p>6</p></label>
-					<label for="Sun" class="roundStyle"><p>7</p></label>
-					<div class="days">
-						<p>Mon</p>
-						<p>Tue</p>
-						<p>Wed</p>
-						<p>Thu</p>
-						<p>Fri</p>
-						<p>Sat</p>
-						<p>Sun</p>
-					</div>
+					<label for="Mon" class="roundStyle"><p>1</p><p>Mon</p></label>
+					<label for="Tue" class="roundStyle"><p>2</p><p>Tue</p></label>
+					<label for="Wed" class="roundStyle"><p>3</p><p>Wed</p></label>
+					<label for="Thu" class="roundStyle"><p>4</p><p>Thu</p></label>
+					<label for="Fri" class="roundStyle"><p>5</p><p>Fri</p></label>
+					<label for="Sat" class="roundStyle"><p>6</p><p>Sat</p></label>
+					<label for="Sun" class="roundStyle"><p>7</p><p>Sun</p></label>
 				</nav>
 			</header>
 			<section class="container">
