pins now look a little better

--- a/index.html
+++ b/index.html
@@ -14,20 +14,34 @@
 					<input type="button" id="createNote" class="roundStyle" value="+">
 				</span>
 				<nav>
-					<input type="radio" name="daysNdates" id="Mon">
-					<input type="radio" name="daysNdates" id="Tue">
-					<input type="radio" name="daysNdates" id="Wed">
-					<input type="radio" name="daysNdates" id="Thu">
-					<input type="radio" name="daysNdates" id="Fri">
-					<input type="radio" name="daysNdates" id="Sat">
-					<input type="radio" name="daysNdates" id="Sun">
-					<label for="Mon" class="roundStyle"><p>1</p><p>Mon</p></label>
-					<label for="Tue" class="roundStyle"><p>2</p><p>Tue</p></label>
-					<label for="Wed" class="roundStyle"><p>3</p><p>Wed</p></label>
-					<label for="Thu" class="roundStyle"><p>4</p><p>Thu</p></label>
-					<label for="Fri" class="roundStyle"><p>5</p><p>Fri</p></label>
-					<label for="Sat" class="roundStyle"><p>6</p><p>Sat</p></label>
-					<label for="Sun" class="roundStyle"><p>7</p><p>Sun</p></label>
+					<section>
+						<input type="radio" name="daysNdates" id="Mon">
+						<label for="Mon" class="roundStyle"><p>1</p><span></span><p>Mon</p></label>
+					</section>
+					<section>
+						<input type="radio" name="daysNdates" id="Tue">
+						<label for="Tue" class="roundStyle"><p>2</p><span></span><p>Tue</p></label>
+					</section>
+					<section>
+						<input type="radio" name="daysNdates" id="Wed">
+						<label for="Wed" class="roundStyle"><p>3</p><span></span><p>Wed</p></label>
+					</section>
+					<section>
+						<input type="radio" name="daysNdates" id="Thu">
+						<label for="Thu" class="roundStyle"><p>4</p><span></span><p>Thu</p></label>
+					</section>
+					<section>
+						<input type="radio" name="daysNdates" id="Fri">
+						<label for="Fri" class="roundStyle"><p>5</p><span></span><p>Fri</p></label>
+					</section>
+					<section>
+						<input type="radio" name="daysNdates" id="Sat">
+						<label for="Sat" class="roundStyle"><p>6</p><span></span><p>Sat</p></label>
+					</section>
+					<section>
+						<input type="radio" name="daysNdates" id="Sun">
+						<label for="Sun" class="roundStyle"><p>7</p><span></span><p>Sun</p></label>
+					</section>
 				</nav>
 			</header>
 			<section class="container">
