seems smth working

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 				<span id="month" class="monthText">June</span>
 				<span class="roundBtnContainer">
 					<input type="button" id="createNote" class="roundStyle" value="+">
+					<p>Create note</p>
 				</span>
 				<nav>
 					<section>
