--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 		<title> One Note </title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+		<script type="text/javascript" src="./scripts/app.js"></script>
+		<script type="text/javascript">Application.start()</script>
 	</head>
 	<body>
 		<section class="wrapper">
