Added new features: Date Logic, Navigation Logic, Notes Creating

--- a/src/dev.html
+++ b/src/dev.html
@@ -5,8 +5,26 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 		<link rel="stylesheet" type="text/css" href="./css/noteStyle.css"/>
-		<script type="text/javascript" src="./scripts/app.js"></script>
+		<script type="text/javascript" src="./scripts/Application.js"></script>
 		
+		<!-- Models region -->
+		<script type="text/javascript" src="./scripts/model/DaysEnum.js" async></script>
+		<script type="text/javascript" src="./scripts/model/DayNames.js" async></script>
+		<script type="text/javascript" src="./scripts/model/Months.js" async></script>
+		<script type="text/javascript" src="./scripts/model/Note.js" async></script>
+		<script type="text/javascript" src="./scripts/model/DateContainer.js" async></script>
+		<script type="text/javascript" src="./scripts/model/DateRange.js" async></script>
+		<!-- end region -->
+
+		<!-- Controllers region-->
+		<script type="text/javascript" src="./scripts/controller/NavigationController.js" async></script>
+		<script type="text/javascript" src="./scripts/controller/NoteController.js" async></script>
+		<!-- end region-->
+
+		<!-- Views region-->
+		<script type="text/javascript" src="./scripts/view/NoteView.js" async></script>
+		<!-- end region-->
+
 		<script type="text/javascript">Application.start()</script>
 	</head>
 	<body>
