--- a/src/dev.html
+++ b/src/dev.html
@@ -3,8 +3,7 @@
 	<head>
 		<title> One Note </title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="./css/style.css"/>
-		<link rel="stylesheet" type="text/css" href="./css/noteStyle.css"/>
+		<link rel="stylesheet" type="text/css" href="../build/css/style.css"/>
 		<script type="text/javascript" src="./scripts/Application.js"></script>
 		
 		<!-- Models region -->
