--- a/src/dev.html
+++ b/src/dev.html
@@ -7,21 +7,21 @@
 		<script type="text/javascript" src="./scripts/Application.js"></script>
 		
 		<!-- Models region -->
-		<script type="text/javascript" src="./scripts/model/DaysEnum.js" async></script>
-		<script type="text/javascript" src="./scripts/model/DayNames.js" async></script>
-		<script type="text/javascript" src="./scripts/model/Months.js" async></script>
-		<script type="text/javascript" src="./scripts/model/Note.js" async></script>
-		<script type="text/javascript" src="./scripts/model/DateContainer.js" async></script>
-		<script type="text/javascript" src="./scripts/model/DateRange.js" async></script>
+		<script type="text/javascript" src="./scripts/model/DaysEnum.js"></script>
+		<script type="text/javascript" src="./scripts/model/DayNames.js"></script>
+		<script type="text/javascript" src="./scripts/model/Months.js"></script>
+		<script type="text/javascript" src="./scripts/model/Note.js"></script>
+		<script type="text/javascript" src="./scripts/model/DateContainer.js"></script>
+		<script type="text/javascript" src="./scripts/model/DateRange.js"></script>
 		<!-- end region -->
 
 		<!-- Controllers region-->
-		<script type="text/javascript" src="./scripts/controller/NavigationController.js" async></script>
-		<script type="text/javascript" src="./scripts/controller/NoteController.js" async></script>
+		<script type="text/javascript" src="./scripts/controller/NavigationController.js"></script>
+		<script type="text/javascript" src="./scripts/controller/NoteController.js"></script>
 		<!-- end region-->
 
 		<!-- Views region-->
-		<script type="text/javascript" src="./scripts/view/NoteView.js" async></script>
+		<script type="text/javascript" src="./scripts/view/NoteView.js">`</script>
 		<!-- end region-->
 
 		<script type="text/javascript">Application.start()</script>
