--- a/src/dev.html
+++ b/src/dev.html
@@ -6,13 +6,16 @@
 		<link rel="stylesheet" type="text/css" href="../build/css/style.css"/>
 		<script type="text/javascript" src="./scripts/Application.js"></script>
 		
+		
 		<!-- Models region -->
+		<script type="text/javascript" src="./scripts/model/Utils.js"></script>
 		<script type="text/javascript" src="./scripts/model/DaysEnum.js"></script>
 		<script type="text/javascript" src="./scripts/model/DayNames.js"></script>
 		<script type="text/javascript" src="./scripts/model/Months.js"></script>
 		<script type="text/javascript" src="./scripts/model/Note.js"></script>
 		<script type="text/javascript" src="./scripts/model/DateContainer.js"></script>
 		<script type="text/javascript" src="./scripts/model/DateRange.js"></script>
+		<script type="text/javascript" src="./scripts/model/Storage.js"></script>
 		<!-- end region -->
 
 		<!-- Controllers region-->
